routes all standard now

--- a/docs/000001. auth middleware streamlining.md
+++ b/docs/000001. auth middleware streamlining.md
@@ -212,7 +212,7 @@ All 39 identified API routes have been reviewed. The `withAuth` wrapper (`lib/au
 | 25 | `app/api/auth/debug/route.ts`                 |   ⚪️   | Debug route.                                                             |
 | 26 | `app/api/auth/logout/route.ts`                |   ⚪️   | Uses `supabase.auth.signOut()` directly. No `withAuth` needed.           |
 | 27 | `app/api/auth/status/route.ts`                |   ⚪️   | Checks auth status using `supabase.auth.getUser()`. No `withAuth` needed. |
-| 28 | `app/api/auth/admin-status/route.ts`          |   ✅   | Uses `withAuth` + admin check.                                           |
+| 28 | `app/api/auth/admin-status/route.ts`          |   ✅🛡️ | Uses `withAdminAuth` wrapper to check JWT claims (Admin route outside /api/admin). |
 | 29 | `app/api/auth/debug-session/route.ts`         |   ⚪️   | Debug route.                                                             |
 | 30 | `app/api/admin/users/route.ts`                |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
 | 31 | `app/api/admin/users/grant-admin/route.ts`    |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
@@ -250,5 +250,7 @@ The following files and patterns were removed or refactored during this project:
     -   Validate RLS policies are correctly enforced.
 2.  **Documentation Review:**
     -   Review other project READMEs (`README.md`, `README Cookies.md`, etc.) and update them if necessary to reflect the streamlined authentication system.
+
+**(Verification Note - [Current Date/Time]):** All API routes listed above were programmatically verified. Authentication methods align with the statuses shown, with necessary exceptions confirmed. `app/api/auth/admin-status/route.ts` was updated to use `withAdminAuth` for consistency.
 
 ---
