--- a/docs/000001. auth middleware streamlining.md
+++ b/docs/000001. auth middleware streamlining.md
@@ -242,6 +242,42 @@ The following files and patterns were removed or refactored during this project:
 
 ---
 
+## Phase X: Test Suite Update & Validation
+
+Following the significant architectural changes to authentication, a dedicated phase is required to update and validate the entire test suite. This ensures tests accurately reflect the new patterns and catch potential regressions.
+
+**Key Areas Requiring Test Updates:**
+
+1.  **`historyService` Tests (`tests/unit/lib/api/history-service.test.ts`):**
+    *   Remove tests related to the old circuit breaker and internal auth logic.
+    *   Implement new tests focusing on Dependency Injection (DI):
+        *   Mock the `SupabaseClient` using helpers (e.g., from `tests/helpers/mock-clients.ts`).
+        *   Verify service functions correctly accept and utilize the *injected* `SupabaseClient`.
+        *   Assert interactions with the mocked client (e.g., `expect(mockSupabase.from).toHaveBeenCalledWith(...)`).
+        *   Confirm reliance on the injected client/RLS for authorization, not internal checks.
+2.  **API Route Tests (`tests/integration/api`, `tests/unit/api`):**
+    *   Update tests for routes now using `withAuth` or `withAdminAuth`.
+    *   Instead of mocking `supabase.auth.getUser()` directly within handlers, simulate the context provided by the wrappers:
+        *   Mock the request context (headers/cookies) expected by `createRouteHandlerClient`.
+        *   Alternatively, mock the `lib/auth/with-auth.ts` module to control the `user` object passed to the handler.
+        *   For `withAdminAuth` tests, ensure the mocked user object includes `{ app_metadata: { is_admin: true } }`.
+3.  **Component Tests (`tests/unit/components`):**
+    *   Adapt tests for components refactored to use the new auth state (e.g., `SidebarHistory`, `VirtualizedChat`, `AuthHeadersSetup`, `SidebarUserNav`).
+    *   Mock the simplified `useAuth` hook (often returning `isLoading` and a mock `SupabaseClient`).
+    *   Mock the `useAuthStore` hook (`stores/auth-store.ts`) to provide various states (`isAuthenticated`, `user`, `profile`, `isAdmin` derived from mock JWT claims).
+    *   When testing components calling `historyService`, inject a mock `SupabaseClient` into the mocked service call.
+4.  **Middleware Tests (`tests/integration/middleware.test.ts`):**
+    *   Update tests for `middleware.ts` to reflect the simplified logic, focused matcher, and the use of `@supabase/ssr`'s `createServerClient` with the custom cookie handler.
+5.  **End-to-End Tests:**
+    *   Review and adjust E2E tests if they relied on specific selectors, loading states, error messages, or content affected by the auth refactor.
+
+**Testing Principles Adherence:**
+
+*   Follow guidelines from `testing.mdc` (mocking before import, resetting mocks, using helpers).
+*   Ensure comprehensive coverage for the new authentication flow.
+
+---
+
 ## Final Steps
 
 1.  **Testing and Monitoring:**
