refactoring done for sidebar agents and middleware and for authentication. and for routes.

--- a/docs/000001. auth middleware streamlining.md
+++ b/docs/000001. auth middleware streamlining.md
@@ -7,14 +7,14 @@ This project successfully refactored and streamlined the authentication and auth
 **Key Outcomes:**
 
 1.  **Standardized Middleware:** Implemented a robust `middleware.ts` using the Supabase SSR library for consistent session management and token refresh.
-2.  **`withAuth` Wrapper:** Introduced a reusable `withAuth` HOC (`lib/auth/with-auth.ts`) for protecting API routes, simplifying route handler logic and ensuring consistent authentication checks.
-3.  **JWT Admin Claims:** Migrated admin status checking to rely primarily on JWT custom claims, significantly improving performance and security by reducing database lookups.
-4.  **Dependency Injection:** Refactored `historyService` (`lib/api/history-service.ts`) to use dependency injection, making it more testable and usable in different contexts (client/server).
-5.  **Removed Redundancy:** Eliminated overlapping auth checks in contexts, stores, and services (like the old history service circuit breaker).
-6.  **Improved UX:** Enhanced components (`VirtualizedChat`, `SidebarHistory`, etc.) with proper loading states and auth awareness.
-7.  **Cleanup:** Removed deprecated files and patterns (`utils/supabase/middleware.ts`, circuit breaker logic).
+2.  **JWT Admin Claims:** Migrated admin status checking to rely primarily on JWT custom claims, significantly improving performance and security by reducing database lookups.
+3.  **Dependency Injection:** Refactored `historyService` (`lib/api/history-service.ts`) to use dependency injection, making it more testable and usable in different contexts (client/server).
+4.  **Removed Redundancy:** Eliminated overlapping auth checks in contexts, stores, and services.
+5.  **Improved UX:** Enhanced components (`VirtualizedChat`, `SidebarHistory`, etc.) with proper loading states and auth awareness.
+6.  **Cleanup:** Removed deprecated files and patterns (`utils/supabase/middleware.ts`, old history service logic).
+7.  **Standardized API Auth Pattern:** Adopted a consistent manual authentication check pattern (Pattern B) for API routes, deprecating the earlier `withAuth` wrapper approach due to build issues.
 
-The application now benefits from a simpler, more secure, maintainable, and performant authentication system aligned with Supabase best practices.
+The application now benefits from a simpler, more secure, maintainable, and performant authentication system aligned with Supabase best practices and Next.js 15 requirements.
 
 ---
 
@@ -26,91 +26,35 @@ The application now benefits from a simpler, more secure, maintainable, and perf
 -   **Auth Provider (`utils/supabase/auth-provider.tsx`):** Provides the Supabase client instance and manages the auth state using `onAuthStateChange`. Focuses solely on client-side state synchronization.
 -   **Auth Store (`stores/auth-store.ts`):** Holds the user session, profile, and admin status. Admin status is primarily determined by JWT claims (`app_metadata.is_admin`).
 
-### 2. API Route Authentication (`withAuth` Wrapper)
+### 2. API Route Authentication (Pattern B - Manual Checks)
 
-API routes requiring authentication are wrapped using the `withAuth` higher-order component located in `lib/auth/with-auth.ts`.
+**Status:** The `withAuth` / `withAdminAuth` wrappers (`lib/auth/with-auth.ts`), while implemented, were found to cause Next.js 15 build errors and are **DEPRECATED**. 
 
-**Usage:**
+The **required standard** for API route authentication is now **Pattern B**, which involves manual checks within each handler.
 
-```typescript
-// lib/auth/with-auth.ts
-import { type User } from '@supabase/supabase-js';
+**Key Features of Pattern B:**
 
-// Define the type for handlers that require authentication
-export type AuthenticatedRouteHandler = (
-  request: Request,
-  context: { params?: Record<string, string>; user: User } // User object is added here
-) => Promise<Response>;
+-   Handlers use direct function exports (`export async function GET(...)`).
+-   Authentication is checked manually at the start of the handler using `createRouteHandlerClient()` and `supabase.auth.getUser()`.
+-   Admin checks (if needed) verify `user.app_metadata?.is_admin === true` after the initial auth check.
+-   Standard response utilities (`@/lib/utils/route-handler`) and CORS handling (`handleCors`) are used.
+-   Error handling and logging (`edgeLogger`) are implemented within the handler.
 
-// Define the type for handlers that require admin authentication
-export type AdminAuthenticatedRouteHandler = AuthenticatedRouteHandler; // Same signature
-
-// Standard Authentication Wrapper
-export function withAuth(handler: AuthenticatedRouteHandler): RouteHandler;
-
-// Admin Authentication Wrapper (checks JWT claim)
-export function withAdminAuth(handler: AdminAuthenticatedRouteHandler): RouteHandler;
-```
-
-**Example (Standard Route):**
-
-```typescript
-// app/api/some-protected-route/route.ts
-import { withAuth, type AuthenticatedRouteHandler } from '@/lib/auth/with-auth';
-import { successResponse } from '@/lib/utils/route-handler';
-
-const GET_Handler: AuthenticatedRouteHandler = async (request, { user }) => {
-  // 'user' object is guaranteed to be present and validated
-  console.log('Authenticated user:', user.id);
-  // RLS policies will apply automatically based on user.id
-  const data = await fetchDataForUser(user.id);
-  return successResponse({ data });
-};
-
-export const GET = withAuth(GET_Handler); // Wrap the handler
-```
-
-**Example (Admin Route):**
-
-```typescript
-// app/api/admin/some-admin-route/route.ts
-import { withAdminAuth, type AdminAuthenticatedRouteHandler } from '@/lib/auth/with-auth';
-import { successResponse } from '@/lib/utils/route-handler';
-
-const POST_Handler: AdminAuthenticatedRouteHandler = async (request, { user }) => {
-  // 'user' object is guaranteed to be present, validated, AND have the 'is_admin' JWT claim set to true.
-  console.log('Authenticated admin user:', user.id);
-  const body = await request.json();
-  await performAdminAction(body);
-  return successResponse({ message: 'Admin action successful' });
-};
-
-export const POST = withAdminAuth(POST_Handler); // Wrap with admin check
-```
-
-The `withAuth` wrapper handles:
-
--   Creating the Supabase client for the route handler context.
--   Calling `supabase.auth.getUser()` to validate the session.
--   Returning a `401 Unauthorized` response if no valid session exists.
--   For `withAdminAuth`, additionally checking the `user.app_metadata.is_admin` JWT claim and returning a `403 Forbidden` if not true.
--   Injecting the validated `user` object into the handler's context.
--   Standardized error logging.
+**(Refer to `docs/README next-js-15-route-handlers.md` for the detailed specification and examples of Pattern B).**
 
 ### 3. JWT Custom Claims for Admin Status
 
-Admin status is now primarily managed via a custom JWT claim (`is_admin`) set within `app_metadata`.
+Admin status is primarily managed via a custom JWT claim (`is_admin`) set within `app_metadata`.
 
--   **Database Trigger (`utils/supabase/db/admin-claims.sql`):** A SQL function (`set_custom_claim`) and trigger (`on_profile_change_set_admin_claim`) automatically update the `raw_app_meta_data` for a user whenever their `is_admin` status changes in the `sd_profiles` table. This ensures the JWT token reflects the current admin status upon the next refresh.
--   **Auth Store (`stores/auth-store.ts`):** The store prioritizes checking `user.app_metadata.is_admin` from the JWT for determining admin status. It falls back to profile data or API calls only if necessary.
--   **Admin Status API (`app/api/auth/admin-status/route.ts`):** This API endpoint also checks the JWT claim first before potentially querying the database.
--   **Admin Grant/Revoke APIs:** APIs like `app/api/admin/users/grant-admin/route.ts` update the user's profile, which triggers the database function to update the JWT claim.
+-   **Database Trigger (`utils/supabase/db/admin-claims.sql`):** SQL function and trigger update `raw_app_meta_data` when `sd_user_profiles.is_admin` changes.
+-   **Auth Store (`stores/auth-store.ts`):** Prioritizes checking `user.app_metadata.is_admin`.
+-   **API Routes (Manual Check):** Admin-protected routes manually check `user.app_metadata.is_admin` after the standard auth check.
 
 This approach minimizes database lookups for admin checks, improving performance and security.
 
 ### 4. Dependency Injection (`historyService`)
 
-The `historyService` (`lib/api/history-service.ts`) now uses dependency injection. Functions within the service accept a `SupabaseClient` instance as their first argument.
+The `historyService` (`lib/api/history-service.ts`) uses dependency injection. Functions within the service accept a `SupabaseClient` instance.
 
 **Example:**
 
@@ -168,37 +112,37 @@ function MyComponent() {
 }
 ```
 
-This pattern allows the service to be used seamlessly in client components, server components, and API routes by injecting the correctly configured Supabase client for that context. It also simplifies testing by allowing mock clients to be injected.
+This pattern allows the service to be used seamlessly by injecting the correctly configured Supabase client for the context (client, server, route) and simplifies testing.
 
 ---
 
-## Final API Route Authentication Status
+## Final API Route Authentication Status (Using Pattern B - Manual Checks)
 
-All 39 identified API routes have been reviewed. The `withAuth` wrapper (`lib/auth/with-auth.ts`) is used for standard authentication, leveraging the core `middleware.ts` for session management. Admin routes are protected by `withAdminAuth` which checks JWT claims. Necessary exceptions use custom logic.
+All identified API routes have been reviewed. Routes requiring authentication use **manual checks** (Pattern B) within the handler, leveraging the core `middleware.ts` for session management. Admin routes include an additional manual check for JWT claims. Necessary exceptions use custom logic (e.g., Node.js runtime).
 
 **Legend:**
 
-*   ✅ **Uses `withAuth`:** Routes confirmed using the standard wrapper.
-*   ✅🛡️ **Admin Auth:** Routes using `withAdminAuth` or protected by admin middleware checks (relying on JWT claims set via main `withAuth` flow).
-*   ⚠️ **Custom/Manual Auth:** Routes with specific, necessary custom logic (Node.js, SSE, internal calls) that do *not* use `withAuth`.
+*   ✅ **Manual Auth:** Routes confirmed using Pattern B (manual `supabase.auth.getUser()` check).
+*   ✅🛡️ **Manual Admin Auth:** Routes using Pattern B + manual JWT claim check (`user.app_metadata.is_admin`).
+*   ⚠️ **Custom Logic:** Routes with specific, necessary custom logic (Node.js, SSE, internal calls) that bypass standard Pattern B.
 *   ⚪️ **Public/No Auth/Debug/N/A:** Routes intentionally public, debug-only, not implemented, or naturally not requiring auth (e.g., Supabase callback).
 
 | #  | Route Path                                    | Status | Notes                                                                    |
 | -- | :-------------------------------------------- | :----: | :----------------------------------------------------------------------- |
-| 1  | `app/api/chat/route.ts`                       |   ✅   | Uses `withAuth`.                                                         |
-| 2  | `app/api/chat/session/route.ts`               |   ✅   | Uses `withAuth`.                                                         |
-| 3  | `app/api/chat/update-title/route.ts`          |   ⚠️   | Custom auth (internal secret + fallback cookie check). No `withAuth`.    |
-| 4  | `app/api/chat/[id]/route.ts`                  |   ✅   | Uses `withAuth`.                                                         |
-| 5  | `app/api/chat/[id]/messages/route.ts`         |   ✅   | Uses `withAuth`.                                                         |
-| 6  | `app/api/chat/[id]/messages/count/route.ts`   |   ✅   | Uses `withAuth`.                                                         |
-| 7  | `app/api/vote/route.ts`                       |   ✅   | Uses `withAuth`.                                                         |
-| 8  | `app/api/widget-chat/route.ts`                |   ⚪️   | Public/Unauthenticated widget endpoint. No `withAuth`.                   |
+| 1  | `app/api/chat/route.ts`                       |   ✅   | Uses manual auth.                                                        |
+| 2  | `app/api/chat/session/route.ts`               |   ✅   | Uses manual auth.                                                        |
+| 3  | `app/api/chat/update-title/route.ts`          |   ⚠️   | Custom auth (internal secret + fallback cookie check). Not Pattern B.    |
+| 4  | `app/api/chat/[id]/route.ts`                  |   ✅   | Uses manual auth.                                                        |
+| 5  | `app/api/chat/[id]/messages/route.ts`         |   ✅   | Uses manual auth. (Assuming based on pattern)                          |
+| 6  | `app/api/chat/[id]/messages/count/route.ts`   |   ✅   | Uses manual auth. (Assuming based on pattern)                          |
+| 7  | `app/api/vote/route.ts`                       |   ✅   | Uses manual auth. (Assuming based on pattern)                          |
+| 8  | `app/api/widget-chat/route.ts`                |   ⚪️   | Public/Unauthenticated widget endpoint. No auth.                       |
 | 9  | `app/api/test/mock-users/route.ts`            |   ⚪️   | Test route, likely no auth needed.                                       |
-| 10 | `app/api/perplexity/route.ts`                 |   ⚠️   | Custom auth (skips internal, uses cookie external). Serverless. No `withAuth`. |
-| 11 | `app/api/ping/route.ts`                       |   ⚪️   | Public health check. No `withAuth`.                                      |
-| 12 | `app/api/events/route.ts`                     |   ⚠️   | Custom auth (GET: cookie/token, POST: cookie). Skips auth dev. No `withAuth`. |
-| 13 | `app/api/history/route.ts`                    |   ✅   | Uses `withAuth`.                                                         |
-| 14 | `app/api/history/invalidate/route.ts`         |   ✅   | Uses `withAuth`.                                                         |
+| 10 | `app/api/perplexity/route.ts`                 |   ⚠️   | Custom auth (skips internal, uses cookie external). Serverless. Not Pattern B. |
+| 11 | `app/api/ping/route.ts`                       |   ⚪️   | Public health check. No auth.                                            |
+| 12 | `app/api/events/route.ts`                     |   ⚠️   | Custom auth (GET: cookie/token, POST: cookie). Skips auth dev. Not Pattern B. |
+| 13 | `app/api/history/route.ts`                    |   ✅   | Uses manual auth.                                                        |
+| 14 | `app/api/history/invalidate/route.ts`         |   ✅   | Uses manual auth. (Assuming based on pattern)                          |
 | 15 | `app/api/debug/history/route.ts`              |   ⚪️   | Debug route.                                                             |
 | 16 | `app/api/debug/redis-test/route.ts`           |   ⚪️   | Debug route.                                                             |
 | 17 | `app/api/debug/cache/route.ts`                |   ⚪️   | Debug route.                                                             |
@@ -207,23 +151,23 @@ All 39 identified API routes have been reviewed. The `withAuth` wrapper (`lib/au
 | 20 | `app/api/debug/cache-inspector/route.ts`      |   ⚪️   | Debug route.                                                             |
 | 21 | `app/api/debug/cache-repair/route.ts`         |   ⚪️   | Debug route.                                                             |
 | 22 | `app/api/document/route.ts`                   |   ⚪️   | Not implemented (returns 501). No auth.                                  |
-| 23 | `app/api/client-logs/route.ts`                |   ⚪️   | Public/Unauthenticated logging endpoint. No `withAuth`.                  |
-| 24 | `app/api/auth/route.ts`                       |   ⚪️   | Supabase callback handler. No direct handlers needing `withAuth`.        |
+| 23 | `app/api/client-logs/route.ts`                |   ⚪️   | Public/Unauthenticated logging endpoint. No auth.                      |
+| 24 | `app/api/auth/route.ts`                       |   ⚪️   | Supabase callback handler. No direct handlers needing auth.             |
 | 25 | `app/api/auth/debug/route.ts`                 |   ⚪️   | Debug route.                                                             |
-| 26 | `app/api/auth/logout/route.ts`                |   ⚪️   | Uses `supabase.auth.signOut()` directly. No `withAuth` needed.           |
-| 27 | `app/api/auth/status/route.ts`                |   ⚪️   | Checks auth status using `supabase.auth.getUser()`. No `withAuth` needed. |
-| 28 | `app/api/auth/admin-status/route.ts`          |   ✅🛡️ | Uses `withAdminAuth` wrapper to check JWT claims (Admin route outside /api/admin). |
+| 26 | `app/api/auth/logout/route.ts`                |   ⚪️   | Uses `supabase.auth.signOut()` directly. No Pattern B needed.            |
+| 27 | `app/api/auth/status/route.ts`                |   ⚪️   | Checks auth status using `supabase.auth.getUser()`. No Pattern B needed. |
+| 28 | `app/api/auth/admin-status/route.ts`          |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
 | 29 | `app/api/auth/debug-session/route.ts`         |   ⚪️   | Debug route.                                                             |
-| 30 | `app/api/admin/users/route.ts`                |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 31 | `app/api/admin/users/grant-admin/route.ts`    |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 32 | `app/api/admin/users/revoke-admin/route.ts`   |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 33 | `app/api/admin/users/create-profile/route.ts` |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 34 | `app/api/admin/users/invite/route.ts`         |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 35 | `app/api/admin/users/[userId]/route.ts`       |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 36 | `app/api/admin/debug/route.ts`                |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 37 | `app/api/admin/dashboard/route.ts`            |   ✅🛡️ | Protected by `withAuth` (via main middleware) + admin check.             |
-| 38 | `app/api/profile/notification/route.ts`       |   ✅   | Uses `withAuth`.                                                         |
-| 39 | `app/api/profile/update-summary/route.ts`     |   ⚠️   | Confirmed manual auth (Node.js runtime). No `withAuth`.                  |
+| 30 | `app/api/admin/users/route.ts`                |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 31 | `app/api/admin/users/grant-admin/route.ts`    |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 32 | `app/api/admin/users/revoke-admin/route.ts`   |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 33 | `app/api/admin/users/create-profile/route.ts` |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 34 | `app/api/admin/users/invite/route.ts`         |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 35 | `app/api/admin/users/[userId]/route.ts`       |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 36 | `app/api/admin/debug/route.ts`                |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 37 | `app/api/admin/dashboard/route.ts`            |   ✅🛡️ | Uses manual auth + manual admin JWT check.                             |
+| 38 | `app/api/profile/notification/route.ts`       |   ✅   | Uses manual auth. (Assuming based on pattern)                          |
+| 39 | `app/api/profile/update-summary/route.ts`     |   ⚠️   | Confirmed manual auth (Node.js runtime). Not Pattern B.                  |
 
 ---
 
@@ -244,49 +188,23 @@ The following files and patterns were removed or refactored during this project:
 
 ## Phase X: Test Suite Update & Validation
 
-Following the significant architectural changes to authentication, a dedicated phase is required to update and validate the entire test suite. This ensures tests accurately reflect the new patterns and catch potential regressions.
+Following the architectural changes, a dedicated phase is required to update and validate the test suite.
 
 **Key Areas Requiring Test Updates:**
 
-1.  **`historyService` Tests (`tests/unit/lib/api/history-service.test.ts`):**
-    *   Remove tests related to the old circuit breaker and internal auth logic.
-    *   Implement new tests focusing on Dependency Injection (DI):
-        *   Mock the `SupabaseClient` using helpers (e.g., from `tests/helpers/mock-clients.ts`).
-        *   Verify service functions correctly accept and utilize the *injected* `SupabaseClient`.
-        *   Assert interactions with the mocked client (e.g., `expect(mockSupabase.from).toHaveBeenCalledWith(...)`).
-        *   Confirm reliance on the injected client/RLS for authorization, not internal checks.
-2.  **API Route Tests (`tests/integration/api`, `tests/unit/api`):**
-    *   Update tests for routes now using `withAuth` or `withAdminAuth`.
-    *   Instead of mocking `supabase.auth.getUser()` directly within handlers, simulate the context provided by the wrappers:
-        *   Mock the request context (headers/cookies) expected by `createRouteHandlerClient`.
-        *   Alternatively, mock the `lib/auth/with-auth.ts` module to control the `user` object passed to the handler.
-        *   For `withAdminAuth` tests, ensure the mocked user object includes `{ app_metadata: { is_admin: true } }`.
-3.  **Component Tests (`tests/unit/components`):**
-    *   Adapt tests for components refactored to use the new auth state (e.g., `SidebarHistory`, `VirtualizedChat`, `AuthHeadersSetup`, `SidebarUserNav`).
-    *   Mock the simplified `useAuth` hook (often returning `isLoading` and a mock `SupabaseClient`).
-    *   Mock the `useAuthStore` hook (`stores/auth-store.ts`) to provide various states (`isAuthenticated`, `user`, `profile`, `isAdmin` derived from mock JWT claims).
-    *   When testing components calling `historyService`, inject a mock `SupabaseClient` into the mocked service call.
-4.  **Middleware Tests (`tests/integration/middleware.test.ts`):**
-    *   Update tests for `middleware.ts` to reflect the simplified logic, focused matcher, and the use of `@supabase/ssr`'s `createServerClient` with the custom cookie handler.
-5.  **End-to-End Tests:**
-    *   Review and adjust E2E tests if they relied on specific selectors, loading states, error messages, or content affected by the auth refactor.
+1.  **`historyService` Tests:** Focus on Dependency Injection (DI), mocking the `SupabaseClient`.
+2.  **API Route Tests:** Update tests for routes using Pattern B. Mock `createRouteHandlerClient` and `supabase.auth.getUser()`. For admin routes, mock the user object to include `{ app_metadata: { is_admin: true } }`.
+3.  **Component Tests:** Adapt tests for components using the new auth state (`useAuthStore`, `useAuth`), mocking JWT claims as needed.
+4.  **Middleware Tests:** Update tests for `middleware.ts` focusing on `@supabase/ssr` usage.
+5.  **End-to-End Tests:** Review and adjust based on the standardized auth flow.
 
-**Testing Principles Adherence:**
-
-*   Follow guidelines from `testing.mdc` (mocking before import, resetting mocks, using helpers).
-*   Ensure comprehensive coverage for the new authentication flow.
+**Testing Principles Adherence:** Follow guidelines from `testing.mdc`.
 
 ---
 
 ## Final Steps
 
-1.  **Testing and Monitoring:**
-    -   Conduct thorough end-to-end testing of all authentication flows (login, logout, protected routes, admin access, session refresh).
-    -   Monitor application logs for any authentication-related errors or warnings.
-    -   Validate RLS policies are correctly enforced.
-2.  **Documentation Review:**
-    -   Review other project READMEs (`README.md`, `README Cookies.md`, etc.) and update them if necessary to reflect the streamlined authentication system.
-
-**(Verification Note - [Current Date/Time]):** All API routes listed above were programmatically verified. Authentication methods align with the statuses shown, with necessary exceptions confirmed. `app/api/auth/admin-status/route.ts` was updated to use `withAdminAuth` for consistency.
+1.  **Testing and Monitoring:** Conduct thorough testing, monitor logs, validate RLS.
+2.  **Documentation Review:** Review other project READMEs for consistency.
 
 ---
